2004-11-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:

	Include ID3TAG_CFLAGS in CFLAGS. Pointed out by Mike Kestner.

2004-11-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/muine.in:

	Have the wrapper exec mono instead of forking. Patch by Peter Oliver.

2004-11-12  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix problem when opening muine with a bad file on the cmdline.

2004-11-12  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Cut of "disc 1" and friends from album name before amazoning.
	Inspired by a patch from Peter Oliver <p.d.oliver@mavit.freeserve.co.uk>.

2004-11-12  Ross Girshick  <ross.girshick@gmail.com>

	* src/MessageConnection.cs:
	* src/Muine.cs:
	* src/SongDatabase.cs:

	Clean up MessageConnection usage.

2004-11-11  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/FileSelector.cs:
	* src/PlaylistWindow.cs:

	Depend on gtksharp2 and use gtk 2.4 filesels.

2004-11-11  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:
	* data/images/Makefile.am:
	* data/images/muine-shuffle-16.png:
	* data/images/muine-shuffle.png:
	* libmuine/pointer-list-model.c: (pointer_list_model_init),
	(pointer_list_model_sort), (pointer_list_model_set_sorting):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_set_sort_func),
	(pointer_list_view_sort):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/StockIcons.cs:

	Add regular shuffle function.

2004-10-16  Hasbullah Bin Pit <sebol@my-penguin.org>

        * configure.in: Added "ms" (Malay) to ALL_LINGUAS

2004-09-28  Ross Girshick  <ross.girshick@gmail.com>

	* libmuine/Makefile.am:
	R libmuine/bacon-message-connection.c:
	R libmuine/bacon-message-connection.h:
	R libmuine/volume-button.c:
	R libmuine/volume-button.h:
	* src/Makefile.am:
	* src/MessageConnection.cs:
	* src/Muine.cs:
	* src/VolumeButton.cs:
