@@ -60,7 +60,8 @@ PKG_CHECK_MODULES(GTKSHARP,
 		  gtk-sharp-2.0 >= $GTKSHARP_REQUIRED \
 		  gnome-sharp-2.0 >= $GTKSHARP_REQUIRED \
 		  glade-sharp-2.0 >= $GTKSHARP_REQUIRED \
-		  gconf-sharp-2.0 >= $GTKSHARP_REQUIRED)
+		  gconf-sharp-2.0 >= $GTKSHARP_REQUIRED \
+		  gnome-vfs-sharp-2.0 >= $GTKSHARP_REQUIRED)
 
 dnl Handle GConf
 AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
