@@ -1,3 +1,12 @@
+2004-11-17  Jorn Baayen  <jbaayen@gnome.org>
+
+	* configure.in:
+	* src/FileSelector.cs:
+	* src/FileUtils.cs:
+	* src/PlaylistWindow.cs:
+
+	Use gnome-vfs for playlist IO.
+
 2004-11-14  Jorn Baayen  <jbaayen@gnome.org>
 
 	* libmuine/Makefile.am:
